--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_speed_dial: ^1.2.5
   persist_theme: ^1.7.0
   json_annotation: ^3.0.0
   path_provider: ^1.6.11
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
