--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   persist_theme: ^1.7.0
   json_annotation: ^3.0.0
-  path_provider: ^1.6.11
+  path_provider: ^1.6.1
   intl: ^0.16.1
+  url_launcher: ^5.4.11
+  image_picker: ^0.6.7+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
