--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,7 @@
 	<false/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Wir benötigen zugriff auf deine Fotos!!!</string>
+	<key>NSFaceIDUsageDescription</key>
+<string>Why is my app authenticating using face id?</string>
 </dict>
 </plist>
