--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   url_launcher: ^5.4.11
   image_picker: ^0.6.7+2
   tuple: ^1.0.3
+  local_auth: ^0.6.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
