--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   local_auth: ^0.6.2+3
   simple_animations: ^2.2.1
   supercharged: ^1.6.0
+  flutter_local_notifications: ^1.4.4+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
