--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   simple_animations: ^2.2.1
   supercharged: ^1.6.0
   flutter_local_notifications: ^1.4.4+1
+  flutter_vibrate: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
