--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_daily_success
+name: my_daily_win
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
