--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>my_daily_win</string>
+	<string>My Daily Win</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,6 +22,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Genehmige Zugriff auf deine Kamera, um ein Foto aufzunehmen!</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Erlaube den Zugriff, um FaceID zu nutzen!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Genehmige den Zugriff, um dein Profilbild zu ändern!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,11 +47,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Genehmige den Zugriff, um dein Profilbild zu ändern!</string>
-	<key>NSFaceIDUsageDescription</key>
-    <string>Erlaube den Zugriff, um FaceID zu nutzen!</string>
-	<key>NSCameraUsageDescription</key>
-<string>Genehmige Zugriff auf deine Kamera, um ein Foto aufzunehmen!</string>
 </dict>
 </plist>
