--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   local_auth: ^0.6.2+3
   flutter_local_notifications: ^1.4.4+1
   flutter_vibrate: ^1.0.0
+  flutter_automation: ^1.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
