--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+1
   flutter_vibrate: ^1.0.0
   flutter_automation: ^1.3.3
+  provider: ^4.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
