--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,13 +28,16 @@ dependencies:
   persist_theme: ^1.7.0
   json_annotation: ^3.0.0
   path_provider: ^1.6.11
-  intl: ^0.16.1
+  intl: ^0.17.0-nullsafety.2
   url_launcher: ^5.4.11
   image_picker: ^0.6.7+2
   tuple: ^1.0.3
-  local_auth: ^0.6.2+3
+  local_auth: ^0.6.3+3
   flutter_local_notifications: ^1.4.4+1
   provider: ^4.3.1
+  share: ^0.6.5+4
+  file_picker: ^2.1.5+1
+
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +45,9 @@ dev_dependencies:
   build_runner: ^1.0.0
   json_serializable: ^3.2.0
   flutter_launcher_icons: "^0.7.3"
+
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
 # Run "flutter pub run flutter_launcher_icons:main" after changing the icon
 flutter_icons:
