--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+7
+version: 3.1.0+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -26,25 +26,25 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   persist_theme: ^1.7.0
-  json_annotation: ^3.0.0
+  json_annotation: ^4.0.1
   path_provider: ^1.6.11
   intl: ^0.17.0-nullsafety.2
-  url_launcher: ^5.4.11
-  image_picker: ^0.6.7+2
-  tuple: ^1.0.3
-  local_auth: ^0.6.3+3
-  flutter_local_notifications: ^1.4.4+1
+  url_launcher: ^6.0.3
+  image_picker: ^0.7.4
+  tuple: ^2.0.0
+  local_auth: ^1.1.1
+  flutter_local_notifications: ^4.0.1+2
   provider: ^4.3.1
-  share: ^0.6.5+4
-  file_picker: ^2.1.5+1
+  share: ^2.0.1
+  file_picker: ^3.0.0-nullsafety.2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.0.0
-  json_serializable: ^3.2.0
-  flutter_launcher_icons: "^0.7.3"
+  json_serializable: ^4.1.0
+  flutter_launcher_icons: ^0.9.0
 
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
