--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  confetti: ^0.5.5
   persist_theme: ^1.7.0
   json_annotation: ^3.1.1
   path_provider: ^1.6.11
@@ -37,7 +38,6 @@ dependencies:
   provider: ^4.3.1
   share: ^2.0.1
   file_picker: ^3.0.0-nullsafety.2
-
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +68,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/ 
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
